<resources>
    <string name="app_name" translatable="false">AnotherKindOfApp</string>
    <string name="alert_dialog_level_1" translatable="false">Alert Dialog, level 1</string>
    <string name="alert_dialog_default" translatable="false">Alert Dialog (default)</string>
    <string name="alert_dialog_single_choice" translatable="false">Alert Dialog (single choice)</string>
    <string name="alert_dialog_single_choice_with_confirmation" translatable="false">Alert Dialog (single choice with confirmation)</string>
    <string name="alert_dialog_multiple_choice" translatable="false">Alert Dialog (multiple choice)</string>
    <string name="alert_dialog_multiple_choice_with_confirmation" translatable="false">Alert Dialog (multiple choice with confirmation)</string>
    <string name="current_color" translatable="false">Current Color:</string>
    <string name="uninstall_confirmed" translatable="false">Yeah! Your Android will be removed soon</string>
    <string name="uninstall_rejected" translatable="false">No no no…</string>
    <string name="uninstall_ignored">Ignored</string>
    <string name="default_alert_title">Alert Dialog Title</string>
    <string name="default_alert_message">Would you like to uninstall Android?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ignore">Ignore</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_close">Close</string>
    <string name="dialog_cancelled">Dialog cancelled!</string>
    <string name="current_volume">Current Volume: %1$d%%</string>
    <string name="volume_description">Volume: %1$d%%</string>
    <string name="volume_setup">Volume setup</string>
    <string name="volume_setup_message">Please specify the desired volume</string>
    <string name="level">Level:</string>
    <string name="alert_dialog_level_2">Alert Dialog, level 2</string>
    <string name="alert_dialog_custom_view">Alert Dialog (custom view)</string>
    <string name="alert_dialog_single_choice_custom">Alert Dialog (single choice, custom)</string>
    <string name="alert_dialog_input_and_validation">Alert Dialog (input and validation)</string>
    <string name="enter_volume">Enter volume</string>
    <string name="empty_value">Value is empty</string>
    <string name="invalid_value">Invalid value</string>
    <string name="alert_dialog_choose_your_level">Alert Dialog Choose your level</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="exit">Exit</string>

    <string-array name="colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
</resources>