<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogLevel2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="24dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textSize="32sp"
            android:text="@string/alert_dialog_level_2" />

        <Button
            android:id="@+id/bt_show_custom_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_custom_view" />

        <Button
            android:id="@+id/bt_show_custom_single_choice_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_single_choice_custom" />

        <Button
            android:id="@+id/bt_show_input_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_input_and_validation" />

        <TextView
            android:id="@+id/tv_current_volume_level_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            tools:text="Current Volume: 50%" />


    </LinearLayout>

</ScrollView>