<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textSize="22sp"
        android:text="@string/alert_dialog_choose_your_level"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/bt_level_one" />

    <Button
        android:id="@+id/bt_level_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/level_1"
        app:layout_constraintBottom_toTopOf="@id/bt_level_two" />

    <Button
        android:id="@+id/bt_level_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/level_2"
        app:layout_constraintTop_toBottomOf="@id/bt_level_one"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/bt_level_one"
        app:layout_constraintEnd_toEndOf="@id/bt_level_one"
        app:layout_constraintBottom_toTopOf="@id/bt_exit" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_level_two"
        app:layout_constraintStart_toStartOf="@id/bt_level_two"
        app:layout_constraintEnd_toEndOf="@id/bt_level_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>